# stylecompass-core

./: .gitignore  __init__.py  pyproject.toml
scripts/: check_missing.py  clean_cache.py  delete_batch.py  download_tars.py  generate_embeddings.py  generate_priors.py  prepare_batch.py  prepare_thumbnails.py  upsert_embeddings.py
src/: __init__.py
src/data/: __init__.py  loaders.py
src/data/datasets/: __init__.py  base.py
src/data/datasets/wikiart/: wikiart.py
src/data/preprocessing/: __init__.py  dataset_prep.py  tar_processor.py  thumbnail_processor.py
src/data/transforms/: __init__.py  image.py
src/models/: extractors.py  factory.py
src/models/architecture/clip/: __init__.py
src/models/architecture/csd/: __init__.py  layers.py  model.py  training.py  transforms.py
src/models/architecture/dino/: __init__.py  model.py  vit.py
src/models/architecture/moco/: __init__.py  model.py  stem.py  vit.py
src/models/architecture/sscd/: __init__.py  model.py
src/utils/: __init__.py  batch_helper.py  config.py  db_connection.py  distributed.py  embeddings.py  experiment.py  logging.py  metrics.py  model.py  training.py
tests/: test_config.py
