[project]
name = "stylecompass-core"
version = "0.1.0"
description = "Style-based image embedding, clustering, and recommendation system"
readme = "README.md"
requires-python = "~=3.10.0"
dependencies = [
    "boto3>=1.35.60",
    "clip",
    "einops>=0.8.0",
    "faiss-gpu>=1.7.2",
    "ftfy>=6.3.1",
    "huggingface-hub>=0.26.2",
    "lancedb>=0.15.0",
    "matplotlib>=3.9.2",
    "numpy<2.0.0",
    "opencv-python>=4.10.0.84",
    "pandas>=2.2.3",
    "pillow>=11.0.0",
    "pytest>=8.3.3",
    "pyyaml>=6.0.2",
    "regex>=2024.11.6",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.1",
    "tenacity>=9.0.0",
    "tensorboard>=2.18.0",
    "timm>=1.0.11",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchvision>=0.20.1",
    "vaex>=4.17.0",
    "wandb>=0.18.6",
]

[project.scripts]
compass-download = "scripts.download_tars:main"
compass-prepare = "scripts.prepare_batch:main"
compass-thumbnails = "scripts.prepare_thumbnails:main"
compass-priors = "scripts.generate_priors:main"
compass-upsert = "scripts.upsert_embeddings:main"
compass-delete = "scripts.delete_batch:main"
compass-clean = "scripts.clean_cache:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "scripts"] 

[tool.hatch.build]
packages = ["src", "scripts"] 

[tool.uv]
package = true

[tool.uv.sources]
clip = { git = "https://github.com/openai/CLIP.git" }
